still trying fix the kwicks on IE7

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -14,8 +14,8 @@ p, ol, ul, li  {color:#233636; margin:10px; line-height:20px;}
 /* search */
 
 #search { float:right; padding:33px 10px 0px; }
-#search input.search-text { float:left; font-size:14px; color:#233636; padding:7px; border:none; width:140px; margin-right:5px; background:#D8F6E8 url(../images/magnifier.png) no-repeat scroll 4px 50%; padding-left:35px;}
-#search input.search-submit {width:90px; height:32px;}
+#search input.search-text { float:left; font-size:14px; color:#233636; padding:7px; border:none; width:130px; margin-right:5px; background:#D8F6E8 url(../images/magnifier.png) no-repeat scroll 4px 50%; padding-left:35px;}
+#search input.search-submit {width:80px; height:32px;}
 
 
 /* wrapper */
@@ -116,9 +116,9 @@ div.working-with-rails img {border:none;}
 
 
 /* menu */
-div#menu {}
-div#menu ul { overflow:hidden; float:left; margin:17px; position:relative;}
-div#menu li { float:left; display:block; overflow:hidden; cursor:pointer;}
+div#menu {float:left; height:85px; width:970px; padding-top:7px;}
+div#menu ul { overflow:hidden; margin:0px; position:relative; float:left;}
+div#menu li { display:block; overflow:hidden; cursor:pointer;}
 div#menu li#first {background-color:#233636;}
 div#menu li#first a {color:#A9E1C6;}
 div#menu li#second a {color:#A9E1C6;}
